<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Downloader for SoundCloud</string>
    <string name="loading_track_title">Loading Track …</string>
    <string name="download">Download</string>
    <string name="demo_welcome">Learn how to use Downloader for SoundCloud in 4 simple steps.</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="dialog_install_soundcloud_play">You don\'t have the SoundCloud app installed, which is required for this app to run. Do you want to install it from Google Play now?</string>
    <string name="dialog_install_soundcloud_amazon">You don\'t have the SoundCloud app installed, which is required for this app to run. Do you want to install it from the Amazon Appstore now?</string>
    <string name="dialog_yes">Sure thing</string>
    <string name="dialog_no">No way</string>
    <string name="demo_step1_title">Select Track</string>
    <string name="demo_step1_text">Open the SoundCloud app and search for the desired track.</string>
    <string name="demo_step2_title">Share Track</string>
    <string name="demo_step2_text">Choose the share menu action.</string>
    <string name="demo_step3_title">Select SoundCloud Downloader</string>
    <string name="demo_step3_text">Select SoundCloud Downloader from the menu.</string>
    <string name="demo_step4_title">Enjoy</string>
    <string name="demo_step4_text">Verify your choice and download the track to your phone.</string>
    <string name="track_error_unsupported_url">Sorry, this type of URL is not supported.</string>
    <string name="track_error_unknown">Unknown error.</string>
    <string name="track_error_no_write_permission">Sorry, but we can\'t write to the external storage.</string>
    <string name="track_error_no_market">There was no app market application found on your device. Please install SoundCloud manually.</string>
    <string name="track_error_not_found">Sorry, the track could not be found. Perhaps it was deleted.</string>
    <string name="track_error_network">Can\'t connect to SoundCloud. Please check your network connection.</string>
    <string name="track_error">Download Error</string>
    <string name="download_description">From soundcloud.com</string>
    <string name="notification_download_finished">Download finished</string>
    <string name="notification_download_finished_ticker">%s was downloaded</string>
    <string name="notification_download_failed">Download failed: %s</string>
    <string name="notification_download_failed_ticker">%s failed to download</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">Cool!</string>
    <string name="download_preferences_title">Download Preferences</string>
    <string name="download_preferences_storage_type_title">Store tracks on</string>
    <string name="preferences">Preferences</string>
    <string name="storage_sd_label">SD Card (%s free)</string>
    <string name="storage_sd_label_no_free">SD Card</string>
    <string name="storage_phone_label">Phone (%s free)</string>
    <string name="storage_phone_label_no_free">Phone</string>
    <string name="storage_custom_label">Custom Path</string>
    <string name="storage_sd">SD Card</string>
    <string name="storage_phone">Phone</string>
    <string name="sd_custom">Custom Path</string>
    <string name="custom_path_error_title">Couldn\'t set custom path</string>
    <string name="custom_path_error_insecure_path">The custom path must start be absolute!</string>
    <string name="custom_path_error_permission_denied">We don\'t have permission to write to this location.</string>
    <string name="custom_path_error_not_a_directory">The given path doesn\'t point to a directory.</string>
    <string name="custom_path_error_unknown">Blyme! Something went wrong. Please choose a different path.</string>
    <string name="intent_send_label">SoundCloud Download</string>
    <string name="buy_ad_free_teaser_text">• No more ads anywhere in the app, even after a reinstall!&lt;br>• Certainty the developer gets enough coffee to build cool new stuff.&lt;br>• A warm, fuzzy feeling.</string>
    <string name="buy_ad_free_teaser_header">What You Get</string>
    <string name="buy_ad_free_teaser_button">Buy Now</string>
    <string name="buy_ad_free_thanks_text">Thank you for your support!</string>
    <string name="error_no_iab">Your device does not support In-App Billing.</string>
    <string name="error_iab_connection">There was an error contacting the billing service. Please try again later.</string>
    <string name="error_cant_write">Can\'t write download. Check your SD card or storage settings.</string>
    <string name="error_already_exists">Can\'t write the file, because it already exists.</string>
    <string name="error_insufficient_space">Can\'t write file due to insufficient space.</string>
    <string name="error_download_expired">Your download expired.</string>
    <string name="error_unknown">Unknown error with code %d</string>
    <string name="track_error_unavailable">The artist does not allow downloads for this track. Sorry for this.</string>
    <string name="track_error_unavailable_purchase">The artist doesn\'t allow free downloads for this track, but provides a purchase option.</string>
    <string name="lbl_artist">Artist:</string>
    <string name="lbl_download_size">Download Size:</string>
    <string name="lbl_description">Description:</string>
    <string name="lbl_purchase">Purchase</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_changelog">Changelog</string>
    <string name="menu_remove_ads">Remove Ads</string>
    <string name="pref_custom_folder_location">Custom folder location</string>
    <string name="pref_use_ssl">Use SSL</string>
    <string name="pref_use_ssl_summary">Use encrypted network communication</string>
    <string name="track_crouton_unavilable_purchase">This track cannot directly be downloaded.</string>
    <string name="track_crouton_unavilable">This track isn\'t available for download.</string>
    <string name="track_error_unsupported_playlist">Sorry, but downloading playlists isn\'t supported yet.</string>
    <string name="toast_download_started">Download started.</string>
    <string name="title_activity_about">About Downloader for SoundCloud</string>
    <string name="by_author">by Pascal Hartig</string>
    <string name="error_download_fail_title">Your Download failed :(</string>
    <string name="error_download_fail_msg">Try a different download location or disabling SSL. If the problem persists, try again in a more stable network!</string>
    <string name="error_download_fail_confirm">Aw, man</string>
    <string name="error_iab_connect_message">There was an error connecting to the Play Store. I\'m really sorry about that. Would you mind trying again?</string>
</resources>