<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/download_preferences_title" >
        <ListPreference
            android:key="download_preferences_storage_type"
            android:defaultValue="EXTERNAL"
            android:title="@string/download_preferences_storage_type_title" />

        <Preference
            android:key="download_preferences_storage_custom_path"
            android:summary=""
            android:title="@string/pref_custom_folder_location" />
        
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/pref_use_ssl"
            android:key="download_preferences_enable_ssl"
            android:summary="@string/pref_use_ssl_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="About">
        <Preference
            android:key="about_donate"
            android:shouldDisableView="true"
            android:title="Donate" />
        <Preference
            android:key="about_rate_app"
            android:title="Rate App" />
        <Preference
            android:key="about_me"
            android:title="About" />
    </PreferenceCategory>

</PreferenceScreen>