<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="8dip"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ImageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_web" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageView1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView1"
        android:layout_alignRight="@+id/TextView1"
        android:layout_below="@+id/TextView1"
        android:layout_marginTop="8dip"
        android:gravity="center"
        android:text="@string/demo_welcome" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="8dip"
        android:layout_alignLeft="@+id/textView1"
        android:paddingLeft="24dip"
        android:paddingRight="24dip"
        android:text="@string/start" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_start"
        android:layout_alignBottom="@+id/btn_start"
        android:layout_alignRight="@+id/textView1"
        android:paddingLeft="24dip"
        android:paddingRight="24dip"
        android:text="@string/next" />

</RelativeLayout>
